Updated project to use .scss instead of .css

--- a/CapstoneProject/angular.json
+++ b/CapstoneProject/angular.json
@@ -118,5 +118,10 @@
       }
     }
   },
-  "defaultProject": "CapstoneProject"
+  "defaultProject": "CapstoneProject",
+  "schematics": {
+    "@schematics/angular:component": {
+      "styleext": "scss"
+    }
+  }
 }
